# identify-x86

./: .gitignore  Cargo.toml  sources.yaml
docs/: .gitignore  Presentation Figures.drawio  Presentation Figures.drawio.bak  export_figs.sh  make_superset_visual.py
docs/examples/: my_int.c  my_magic.c
junk/: anal-big-run.py  anal-big-run2.py  big-run-2.csv  big-run.csv
memory-image/: Cargo.toml
memory-image/src/: lib.rs
ml/: .dockerignore  .gitignore  Dockerfile  checkpoint_to_torchscript.py  evaluate.py  identify_x86_data.py  identify_x86_graph.py  identify_x86_model.py  learn.ipynb  learn.py  onnx1.ipynb  onnx1.py  onnx2.ipynb  onnx2.py  requirements.txt
test-data/: .gitignore
test-data/datatool/: Cargo.toml
test-data/datatool/src/: byteweight.rs  debian.rs  evaluate.rs  main.rs  split.rs
test-data/datatool/src/cli/: bulk_make_graph.rs  evaluation.rs  mod.rs  similarity.rs  util.rs
test-data/datatool/src/disassembly/: mod.rs
test-data/datatool/src/disassembly/tool/: deepdi.rs  ida.rs  identify_x86.rs  mod.rs
test-data/datatool/src/fetch/: byteweight.rs  debian.rs  mod.rs
test-data/datatool/src/loader/: elf_symbols.rs  mod.rs  pdb.rs
test-data/datatool/src/model/: graph.rs  interval_set.rs  mod.rs  superset.rs  vocab.rs
test-data/datatool/src/model/graph/: dummy_single_vec.rs  mod.rs  single_vec.rs
test-data/datatool/src/runners/: deepdi.rs  ida.rs  mod.rs
test-data/fetch/: Cargo.toml
test-data/fetch/src/: debian.rs  loader.rs  main.rs  model.rs
test-data/fetch/src/loader/: debug.rs  dwarf.rs  elf_symbols.rs  mod.rs  pdb.rs
test-data/fetch/src/model/: interval_set.rs  mod.rs
