[workspace]
resolver = "2"
members = [
    "test-data/datatool",
    "memory-image",
]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = 2
split-debuginfo = "packed"

[patch.crates-io]
# To add support for older debian versions
debian-packaging = { path = "/home/dcnick3/git_cloned/linux-packaging-rs/debian-packaging" }