[package]
name = "memory-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.0.2", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
