[package]
name = "identify-x86-datatool"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.64"
arrayvec = "0.7.2"
async-tar = "0.4.2"
async-trait = "0.1.68"
bincode = "1.3.3"
bitflags = { version = "2.0.2", features = ["serde"] }
bumpalo = "3.12.0"
clap = { version = "4.0.8", features = ["derive"] }
dbg_hex = "0.1.1"
# for support of older debian distros
debian-packaging = { git = "https://github.com/DCNick3/linux-packaging-rs.git", rev = "9acfea8cb90d76ffab75084bb1e584bb5bd452c5", features = ["http"], default-features = false }
enum-map = "2.4.2"
futures-io = "0.3.24"
futures-util = "0.3.24"
gimli = "0.27.2"
hex = "0.4.3"
iced-x86 = { version = "1.17.0", features = ["serde"] }
indicatif = { version = "0.17.0", features = ["tokio", "rayon"] }
itertools = "0.10.5"
memory-image = { path = "../../memory-image" }
ndarray = "0.15.6"
# for zstd support
ndarray-npy = { git = "https://github.com/DCNick3/ndarray-npy", rev = "30b5e4e5fb36cf927b373ad2f5b608592a072541", features = ["compressed_npz_zstd"] }
num = "0.4.0"
num_enum = "0.5.7"
object = { version = "0.30.3", features = ["write"] }
once_cell = "1.14.0"
parquet = "35.0.0"
parquet_derive = "35.0.0"
pdb = "0.8.0"
permutation = "0.4.1"
rayon = "1.5.3"
regex = "1.6.0"
rustc-hash = "1.1.0"
serde = "1.0.145"
serde_json = "1.0.85"
serde_yaml = "0.9.19"
# fixing the "entrypoint" api
shiplift = { git = "https://github.com/DCNick3/shiplift", rev = "d53be92b194251b27a128b7403acd15c7ae185ce" }
smallvec = "1.9.0"
sptr = "0.3.2"
strum = { version = "0.24.1", features = ["derive"] }
tempfile = "3.4.0"
tokio = { version = "1.21.0", features = ["macros", "rt", "process"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["serde"] }
walkdir = "2.3.2"
yoke = { version = "0.7.0", features = ["derive"] }
zstd = "0.12.3"
