[package]
name = "identify-x86-test-data-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
async-tar = "0.4.2"
debian-packaging = "0.15.0"
futures-io = "0.3.24"
futures-util = "0.3.24"
indicatif = { version = "0.17.0", features = ["tokio"] }
object = "0.29.0"
tokio = { version = "1.21.0", features = ["macros", "rt"] }
yoke = { version = "0.6.1", features = ["derive"] }
