[package]
name = "identify-x86-test-data-fetch"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.64"
async-tar = "0.4.2"
bincode = "1.3.3"
clap = { version = "4.0.8", features = ["derive"] }
debian-packaging = { version = "0.15.0", features = ["http"], default-features = false }
futures-io = "0.3.24"
futures-util = "0.3.24"
gimli = "0.26.2"
hex = "0.4.3"
indicatif = { version = "0.17.0", features = ["tokio"] }
itertools = "0.10.5"
memory-image = { path = "../../memory-image" }
num = "0.4.0"
object = "0.29.0"
once_cell = "1.14.0"
pdb = "0.8.0"
regex = "1.6.0"
serde = "1.0.145"
serde_json = "1.0.85"
smallvec = "1.9.0"
tokio = { version = "1.21.0", features = ["macros", "rt"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["serde"] }
yoke = { version = "0.6.1", features = ["derive"] }
zstd = "0.11.2"
